feat: api openapi endpoints defined
