# api/openapi.yaml
@@ -409,6 +409,26 @@ paths:
               schema:
                 $ref: '#/components/schemas/result'
   /v1/team/{team_id}:
+    get:
+      summary: Get team by team ID
+      description: Get a team by team ID
+      tags:
+        - team
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: team_id
+          in: path
+          required: true
+          schema:
+            $ref: '#/components/schemas/uuid'
+      responses:
+        '200':
+          description: Team found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/team'
     put:
       summary: Update team
       description: Update a team by team ID
@@ -596,7 +616,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/result'
-  /v1/team/{team_id}/member/{user_id}:
+  /v1/team/{team_id}/members/{user_id}:
     delete:
       summary: Remove team member
       description: Remove a member from a team by team ID
